CORS issue fixed